array.island.Island.scala.error
Compilation error:
Island:4: error: overloaded method value apply with alternatives:
  (start: Int,end: Int)scala.collection.immutable.Range <and>
  (start: Int,end: Int,step: Int)scala.collection.immutable.Range
 cannot be applied to (Array[Int])
  for (rg <- 1 to Range(num)) {
                  ^